# B-Zide-Channel-Strip

./: CMakeLists.txt
Assets/: icon.icns
Source/: BZideEditor.cpp  BZideEditor.h  BZideProcessor.cpp  BZideProcessor.h  LicenseValidator.h
Source/DSP/: BZideCompressor.h  BZideGate.h  BZideLimiter.h  BZideSaturation.h  ClipperProcessor.h  CompressorProcessor.h  DeEsserProcessor.h  GateProcessor.h  LA2ACompressor.cpp  LA2ACompressor.h  PreampProcessor.h  SaturationProcessor.h
Source/UI/: AnalyzerWindow.h  ChannelSection.h  CompSection.h  DS2Section.h  EQSection.h  GateSection.h  InsertSection.h  LimiterPanel.h  LimiterWindow.h  MeterBallistics.cpp  MeterBallistics.h  MeterChannel.cpp  MeterChannel.h  OutputSection.h  PluginStyle.h  PreSection.h  RotaryKnob.cpp  RotaryKnob.h  SpectrumAnalyzer.h  VUMeterFace.cpp  VUMeterFace.h
